force-app/main/default/objects/Member__c/Member__c.object-meta.xml
<CustomObject>
    <label>會員</label>
    <nameField>
        <label>會員姓名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>