force-app/main/default/objects/Member__c/fields/CellPhone__c.field-meta.xml
<CustomField>
    <fullName>CellPhone__c</fullName>
    <label>手機</label>
    <type>Phone</type>
</CustomField>