force-app/main/default/objects/Member__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>性別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>先生</fullName>
            </value>
            <value>
                <fullName>小姐</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>