force-app/main/default/objects/Member__c/fields/LinePushAgreement__c.field-meta.xml
<CustomField>
    <fullName>LinePushAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否允許LINE推播</label>
    <type>Checkbox</type>
</CustomField>