force-app/main/default/objects/Member__c/fields/LineUID__c.field-meta.xml
<CustomField>
    <fullName>LineUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LINE_UID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>