force-app/main/default/objects/Member__c/fields/MemberAgreement__c.field-meta.xml
<CustomField>
    <fullName>MemberAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>同意會員條款</label>
    <type>Checkbox</type>
</CustomField>