force-app/main/default/objects/Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LineUID__c</columns>
    <columns>CellPhone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>